# clankcord

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  MEASURE.md  PLAN.md  REFACTOR.md  REFACTOR_PLAN.md  WORKING_PLAN.md  compose.yml  config.ex.toml
clankcord/: Cargo.toml  Dockerfile
clankcord/docs/: ARCHITECTURE.md  AUTOMATION_SPEC.md  PLAN.md  agent_plan.md  agent_plan2.md
clankcord/res/prompts/: agent-task-base.md  agent-task-local-context.md  agent-task-origin-public-text.md  agent-task-origin-text.md  agent-task-origin-voice.md  agent-task-response-contract.md  agent-task-route-dm.md  agent-task-route-voice.md  agent-task.md  agent-thread-title.md  base.md  clankcord-tools.md  master.md  response-contract.md  runtime-work.md
clankcord/src/: cli.rs  config.rs  dashboard.rs  errors.rs  lib.rs  main.rs
clankcord/src/adapters/: http.rs  mod.rs  publish.rs  stt.rs  wakeword.rs
clankcord/src/adapters/codex/: mod.rs  output.rs  process.rs
clankcord/src/adapters/discord/: api.rs  mod.rs  runtime_api.rs  text.rs
clankcord/src/dashboard/: dashboard-charts.js  dashboard-explorer.js  dashboard-json.js  dashboard-tables.js  dashboard.css  dashboard.js  index.html  mod.rs  vendor-LICENSES.md
clankcord/src/runtime/: bots.rs  coding.rs  core.rs  message_chunks.rs  mod.rs  refinement.rs  runtime_config.rs  scope.rs  service.rs  util.rs
clankcord/src/runtime/agents/: error.rs  invocation.rs  mod.rs  registry.rs  worker.rs
clankcord/src/runtime/automations/: engine.rs  manual.rs  mod.rs  room_agents.rs  spec.rs
clankcord/src/runtime/core/: lifecycle.rs  state.rs
clankcord/src/runtime/domain/: audio_segments.rs  commands.rs  confirmations.rs  external.rs  maintenance.rs  mod.rs  publication.rs  responses.rs  wake_activations.rs  wake_probes.rs  workers.rs
clankcord/src/runtime/jobs/: kind.rs  mod.rs  output.rs  payload.rs  record.rs  util.rs
clankcord/src/runtime/rooms/: catalog.rs  control_state.rs  mod.rs  types.rs
clankcord/src/runtime/sessions/: join.rs  mod.rs  playback.rs  types.rs
clankcord/src/runtime/timeline/: agent_sessions.rs  events.rs  jobs.rs  maintenance.rs  members.rs  mod.rs  room_controls.rs  schema.rs  store.rs  (+3 more)
clankcord/tess/: agent_sessions.rs
clankcord/tests/: agent_prompt.rs  agent_sessions.rs  automations.rs  cli_help.rs  cli_transcripts.rs  codex_config.rs  codex_output.rs  config_env.rs  dashboard_health.rs  debug_trace.rs  discord_errors.rs  discord_slash.rs  interactions.rs  jobs.rs  members.rs  message_chunks.rs  performance.rs  room_controls.rs  room_join.rs  routing.rs  stt_adapter.rs  timeline.rs  voice_capture.rs  wake_activations.rs  wake_commands.rs  wakeword_adapter.rs  workers.rs
clankcord/tests/common/: mod.rs
(+125 files in other folders)
