[package]
name = "clankcord"
version = "0.1.0"
edition = "2024"
default-run = "clawcord"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
bincode = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
hound = "3.5"
mime_guess = "2"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend", "utils", "voice"] }
sha2 = "0.10"
songbird = { version = "0.5", default-features = false, features = ["driver", "gateway", "receive", "rustls", "serenity", "tungstenite"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[lib]
name = "clankcord"
path = "src/lib.rs"

[[bin]]
name = "clawcord"
path = "src/main.rs"
